--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="uz.jakhongir.espiservis">
+    
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="espiservis"
         android:name="${applicationName}"
